@@ -32,7 +32,7 @@ public class Jama1 extends Mainloc {
     private int Animcount = 1;
     private static final int MAXCOUNT = 5;
     private int Counter = 0;
-    private GenericImage[] Wuermer;
+    private final GenericImage[] Wuermer;
 
     private Hojnt jaeger;
     private boolean showHojnt = false;
@@ -137,7 +137,7 @@ public class Jama1 extends Mainloc {
     @Override
     public void paintLocation(GenericDrawingContext g) {
         // Clipping -Region initialisieren
-        if (mainFrame.Clipset == false) {
+        if (!mainFrame.Clipset) {
             mainFrame.scrollx = 0;
             mainFrame.scrolly = 0;
             Cursorform = 200;
@@ -152,11 +152,11 @@ public class Jama1 extends Mainloc {
 
 
         // Jaeger Hintergrund loeschen
-        if (showHojnt == true) {
+        if (showHojnt) {
             // Clipping - Rectangle feststellen und setzen
             Borderrect temp = jaeger.HojntRect();
 
-            if (istJaegerGebueckt == false) {
+            if (!istJaegerGebueckt) {
                 g.setClip(temp.lo_point.x - 10, temp.lo_point.y - 10,
                         temp.ru_point.x - temp.lo_point.x + 20,
                         temp.ru_point.y - temp.lo_point.y + 20);
@@ -174,7 +174,7 @@ public class Jama1 extends Mainloc {
         }
 
         // Wacki zeichnen, solange noch da
-        if (mainFrame.Actions[908] == false) {
+        if (!mainFrame.Actions[908]) {
             Counter--;
             if (Counter < 1) {
                 Counter = MAXCOUNT;
@@ -189,18 +189,18 @@ public class Jama1 extends Mainloc {
         }
 
         // Jaeger bewegen
-        if ((showHojnt == true) && (walkReady == false)) {
+        if ((showHojnt) && (!walkReady)) {
             // Waschfrau um 1 Schritt weiterbewegen (nur virtuell)
             walkReady = jaeger.Move();
         }
 
         // Jaeger zeichnen
-        if (showHojnt == true) {
+        if (showHojnt) {
             // Clipping - Rectangle feststellen und setzen
             Borderrect temp = jaeger.HojntRect();
 
             // normales Cliprectloeschen
-            if (istJaegerGebueckt == false) {
+            if (!istJaegerGebueckt) {
                 g.setClip(temp.lo_point.x - 10, temp.lo_point.y - 10,
                         temp.ru_point.x - temp.lo_point.x + 20,
                         temp.ru_point.y - temp.lo_point.y + 20);
@@ -223,7 +223,7 @@ public class Jama1 extends Mainloc {
             // nur rumstehen oder laufen
             else {
                 // normal zeichnen
-                if (istJaegerGebueckt == false) {
+                if (!istJaegerGebueckt) {
                     jaeger.drawHojnt(g);
                 }
 
@@ -281,7 +281,7 @@ public class Jama1 extends Mainloc {
             my = g.getClipBounds();
             g.setClip(0, 0, 644, 484);
             mainFrame.ifont.drawString(g, outputText, outputTextPos.x, outputTextPos.y, FarbenArray[TalkPerson]);
-            g.setClip((int) my.getX(), (int) my.getY(), (int) my.getWidth(), (int) my.getHeight());
+            g.setClip(my.getX(), my.getY(), my.getWidth(), my.getHeight());
         }
 
         // Redeschleife herunterzaehlen und Neuzeichnen ermoeglichen
@@ -319,7 +319,7 @@ public class Jama1 extends Mainloc {
         outputText = "";
 
         // Wenn in Animation, dann normales Gameplay aussetzen
-        if (mainFrame.fPlayAnim == true) {
+        if (mainFrame.fPlayAnim) {
             return;
         }
 
@@ -329,7 +329,7 @@ public class Jama1 extends Mainloc {
         }
 
         // wenn InventarCursor, dann anders reagieren
-        if (mainFrame.invCursor == true) {
+        if (mainFrame.invCursor) {
             // linker Maustaste
             if (e.getModifiers() != GenericInputEvent.BUTTON3_MASK) {
                 nextActionID = 0;
@@ -337,14 +337,14 @@ public class Jama1 extends Mainloc {
                 Borderrect tmp = mainFrame.krabat.KrabatRect();
 
                 // Aktion, wenn Krabat angeclickt wurde
-                if (tmp.IsPointInRect(pTemp) == true) {
+                if (tmp.IsPointInRect(pTemp)) {
                     nextActionID = 500 + mainFrame.whatItem;
                     mainFrame.repaint();
                     return;
                 }
 
                 // Ausreden fuer Wacki
-                if ((wackiRect.IsPointInRect(pTemp) == true) && (mainFrame.Actions[908] == false)) {
+                if ((wackiRect.IsPointInRect(pTemp)) && (!mainFrame.Actions[908])) {
                     // Standard - Sinnloszeug
                     nextActionID = 150;
                 }
@@ -362,7 +362,6 @@ public class Jama1 extends Mainloc {
                 nextActionID = 0;
                 mainFrame.krabat.StopWalking();
                 mainFrame.repaint();
-                return;
             }
         }
 
@@ -373,7 +372,7 @@ public class Jama1 extends Mainloc {
                 nextActionID = 0;
 
                 // Wacki ansehen
-                if ((wackiRect.IsPointInRect(pTemp) == true) && (mainFrame.Actions[908] == false)) {
+                if ((wackiRect.IsPointInRect(pTemp)) && (!mainFrame.Actions[908])) {
                     nextActionID = 1;
                 }
 
@@ -383,8 +382,8 @@ public class Jama1 extends Mainloc {
                 // rechte Maustaste
 
                 // Wacki mitnehmen ?
-                if ((wackiRect.IsPointInRect(pTemp) == true) &&
-                        (mainFrame.Actions[908] == false)) {
+                if ((wackiRect.IsPointInRect(pTemp)) &&
+                        (!mainFrame.Actions[908])) {
                     nextActionID = 50;
                     mainFrame.repaint();
                     return;
@@ -402,7 +401,7 @@ public class Jama1 extends Mainloc {
     @Override
     public void evalMouseMoveEvent(GenericPoint pTemp) {
         // Wenn Animation oder Krabat - Animation, dann transparenter Cursor
-        if ((mainFrame.fPlayAnim == true) || (mainFrame.krabat.nAnimation != 0)) {
+        if ((mainFrame.fPlayAnim) || (mainFrame.krabat.nAnimation != 0)) {
             if (Cursorform != 20) {
                 Cursorform = 20;
                 mainFrame.setCursor(mainFrame.Nix);
@@ -411,22 +410,18 @@ public class Jama1 extends Mainloc {
         }
 
         // wenn InventarCursor, dann anders reagieren
-        if (mainFrame.invCursor == true) {
+        if (mainFrame.invCursor) {
             // hier kommt Routine hin, die Highlight berechnet
             Borderrect tmp = mainFrame.krabat.KrabatRect();
-            if ((tmp.IsPointInRect(pTemp) == true) ||
-                    ((wackiRect.IsPointInRect(pTemp) == true) && (mainFrame.Actions[908] == false))) {
-                mainFrame.invHighCursor = true;
-            } else {
-                mainFrame.invHighCursor = false;
-            }
+            mainFrame.invHighCursor = (tmp.IsPointInRect(pTemp)) ||
+                    ((wackiRect.IsPointInRect(pTemp)) && (!mainFrame.Actions[908]));
 
-            if ((Cursorform != 10) && (mainFrame.invHighCursor == false)) {
+            if ((Cursorform != 10) && (!mainFrame.invHighCursor)) {
                 Cursorform = 10;
                 mainFrame.setCursor(mainFrame.Cinventar);
             }
 
-            if ((Cursorform != 11) && (mainFrame.invHighCursor == true)) {
+            if ((Cursorform != 11) && (mainFrame.invHighCursor)) {
                 Cursorform = 11;
                 mainFrame.setCursor(mainFrame.CHinventar);
             }
@@ -435,8 +430,8 @@ public class Jama1 extends Mainloc {
 
         // normaler Cursor, normale Reaktion
         else {
-            if ((wackiRect.IsPointInRect(pTemp) == true) &&
-                    (mainFrame.Actions[908] == false)) {
+            if ((wackiRect.IsPointInRect(pTemp)) &&
+                    (!mainFrame.Actions[908])) {
                 if (Cursorform != 1) {
                     mainFrame.setCursor(mainFrame.Kreuz);
                     Cursorform = 1;
@@ -462,12 +457,12 @@ public class Jama1 extends Mainloc {
     @Override
     public void evalKeyEvent(GenericKeyEvent e) {
         // Wenn Inventarcursor, dann keine Keys
-        if (mainFrame.invCursor == true) {
+        if (mainFrame.invCursor) {
             return;
         }
 
         // Bei Animationen keine Keys
-        if (mainFrame.fPlayAnim == true) {
+        if (mainFrame.fPlayAnim) {
             return;
         }
 
@@ -500,7 +495,6 @@ public class Jama1 extends Mainloc {
             Keyclear();
             nextActionID = 120;
             mainFrame.repaint();
-            return;
         }
     }
 
@@ -522,8 +516,8 @@ public class Jama1 extends Mainloc {
         GenericPoint tTlk = new GenericPoint(0, 0);
 
         // nichts zu tun, oder Krabat laeuft noch
-        if ((mainFrame.krabat.isWandering == true) ||
-                (mainFrame.krabat.isWalking == true)) {
+        if ((mainFrame.krabat.isWandering) ||
+                (mainFrame.krabat.isWalking)) {
             return;
         }
 
@@ -567,7 +561,7 @@ public class Jama1 extends Mainloc {
             case 52:
                 // Wuermer mitnehmen
                 // Wuermer dem Inventar hinzufuegen
-                mainFrame.inventory.vInventory.addElement(new Integer(8));
+                mainFrame.inventory.vInventory.addElement(Integer.valueOf(8));
                 mainFrame.krabat.nAnimation = 92;
                 nextActionID = 53;
                 TakeCounter = 5;
@@ -590,7 +584,7 @@ public class Jama1 extends Mainloc {
 
             case 54:
                 // Warten, bis er ausgelaufen ist
-                if (walkReady == true) {
+                if (walkReady) {
                     nextActionID = 55;
                 }
                 break;
