@@ -33,7 +33,7 @@ public class Polo1 extends Mainloc {
 
     private BurMichal michael;
     private BurHanza agnes;
-    private Multiple2 Dialog;
+    private final Multiple2 Dialog;
 
     private Borderrect hanzaRect, michalRect;
     private GenericPoint hanzaTalk, michalTalk;
@@ -181,7 +181,7 @@ public class Polo1 extends Mainloc {
 		}*/
 
         // Clipping -Region initialisieren
-        if (mainFrame.Clipset == false) {
+        if (!mainFrame.Clipset) {
             mainFrame.scrollx = 0;
             mainFrame.scrolly = 0;
             Cursorform = 200;
@@ -195,7 +195,7 @@ public class Polo1 extends Mainloc {
         g.drawImage(background, 0, 0, null);
 
         // Wenn die Steine weg, dann anderes GenericImage drueber
-        if (mainFrame.Actions[912] == true) {
+        if (mainFrame.Actions[912]) {
             g.setClip(180, 339, 102, 35);
             g.drawImage(polo3, 180, 339, null);
             g.drawImage(polo4, 211, 339, null);
@@ -203,13 +203,13 @@ public class Polo1 extends Mainloc {
         } else // teilweise Auflesen ermoeglichen
         {
             g.setClip(180, 339, 102, 35);
-            if (stein1verdeckt == true) {
+            if (stein1verdeckt) {
                 g.drawImage(polo3, 180, 339, null);
             }
-            if (stein2verdeckt == true) {
+            if (stein2verdeckt) {
                 g.drawImage(polo4, 211, 339, null);
             }
-            if (stein3verdeckt == true) {
+            if (stein3verdeckt) {
                 g.drawImage(polo5, 231, 339, null);
             }
         }
@@ -271,7 +271,7 @@ public class Polo1 extends Mainloc {
         GenericPoint pKrTemp = mainFrame.krabat.GetKrabatPos();
 
         // hinterm polo2 (nur Clipping - Region wird neugezeichnet)
-        if (polo2Rect.IsPointInRect(pKrTemp) == true) {
+        if (polo2Rect.IsPointInRect(pKrTemp)) {
             // System.out.println("drawing");
             g.drawImage(polo2, 510, 240, null); //orig 510, 336
         }
@@ -283,7 +283,7 @@ public class Polo1 extends Mainloc {
             my = g.getClipBounds();
             g.setClip(0, 0, 644, 484);
             mainFrame.ifont.drawString(g, outputText, outputTextPos.x, outputTextPos.y, FarbenArray[TalkPerson]);
-            g.setClip((int) my.getX(), (int) my.getY(), (int) my.getWidth(), (int) my.getHeight());
+            g.setClip(my.getX(), my.getY(), my.getWidth(), my.getHeight());
         }
 
         // Redeschleife herunterzaehlen und Neuzeichnen ermoeglichen
@@ -301,7 +301,7 @@ public class Polo1 extends Mainloc {
         }
 
         // Multiple Choice ausfuehren
-        if (mainFrame.isMultiple == true) {
+        if (mainFrame.isMultiple) {
             mainFrame.Clipset = false;
             Dialog.paintMultiple(g);
             return;
@@ -319,7 +319,7 @@ public class Polo1 extends Mainloc {
     @Override
     public void evalMouseEvent(GenericMouseEvent e) {
         // bei Multiple Choice extra Mouseroutine
-        if (mainFrame.isMultiple == true) {
+        if (mainFrame.isMultiple) {
             Dialog.evalMouseEvent(e);
             return;
         }
@@ -335,7 +335,7 @@ public class Polo1 extends Mainloc {
         outputText = "";
 
         // Wenn in Animation, dann normales Gameplay aussetzen
-        if (mainFrame.fPlayAnim == true) {
+        if (mainFrame.fPlayAnim) {
             return;
         }
 
@@ -345,7 +345,7 @@ public class Polo1 extends Mainloc {
         }
 
         // wenn InventarCursor, dann anders reagieren
-        if (mainFrame.invCursor == true) {
+        if (mainFrame.invCursor) {
             // linker Maustaste
             if (e.getModifiers() != GenericInputEvent.BUTTON3_MASK) {
                 nextActionID = 0;
@@ -353,14 +353,14 @@ public class Polo1 extends Mainloc {
                 Borderrect tmp = mainFrame.krabat.KrabatRect();
 
                 // Aktion, wenn Krabat angeclickt wurde
-                if (tmp.IsPointInRect(pTemp) == true) {
+                if (tmp.IsPointInRect(pTemp)) {
                     nextActionID = 500 + mainFrame.whatItem;
                     mainFrame.repaint();
                     return;
                 }
 
                 // Ausreden fuer Hanza
-                if ((hanzaRect.IsPointInRect(pTemp) == true) && (michalRect.IsPointInRect(pTemp) == false)) {
+                if ((hanzaRect.IsPointInRect(pTemp)) && (!michalRect.IsPointInRect(pTemp))) {
                     switch (mainFrame.whatItem) {
                         case 2: // kij
                             nextActionID = 200;
@@ -376,7 +376,7 @@ public class Polo1 extends Mainloc {
                 }
 
                 // Ausreden fuer Michal
-                if (michalRect.IsPointInRect(pTemp) == true) {
+                if (michalRect.IsPointInRect(pTemp)) {
                     switch (mainFrame.whatItem) {
                         case 2: // kij
                             nextActionID = 205;
@@ -392,7 +392,7 @@ public class Polo1 extends Mainloc {
                 }
 
                 // Ausreden fuer Kamuski
-                if ((kamuskiRect.IsPointInRect(pTemp) == true) && (mainFrame.Actions[912] == false)) {
+                if ((kamuskiRect.IsPointInRect(pTemp)) && (!mainFrame.Actions[912])) {
                     switch (mainFrame.whatItem) {
                         case 17: // rohodz
                             nextActionID = 220;
@@ -417,7 +417,6 @@ public class Polo1 extends Mainloc {
                 nextActionID = 0;
                 mainFrame.krabat.StopWalking();
                 mainFrame.repaint();
-                return;
             }
         }
 
@@ -428,24 +427,24 @@ public class Polo1 extends Mainloc {
                 nextActionID = 0;
 
                 // Kamuski ansehen
-                if ((kamuskiRect.IsPointInRect(pTemp) == true) && (mainFrame.Actions[912] == false)) {
+                if ((kamuskiRect.IsPointInRect(pTemp)) && (!mainFrame.Actions[912])) {
                     nextActionID = 3;
                     pTemp = Pkamuski;
                 }
 
                 // zu Kulow gehen
-                if (rechterAusgang.IsPointInRect(pTemp) == true) {
+                if (rechterAusgang.IsPointInRect(pTemp)) {
                     nextActionID = 101;
                     GenericPoint kt = mainFrame.krabat.GetKrabatPos();
 
                     // Wenn nahe am Ausgang, dann "gerade" verlassen
-                    if (rechterAusgang.IsPointInRect(kt) == false) {
+                    if (!rechterAusgang.IsPointInRect(kt)) {
                         pTemp = Pright;
                     } else {
                         pTemp = new GenericPoint(Pright.x, kt.y);
                     }
 
-                    if (mainFrame.dClick == true) {
+                    if (mainFrame.dClick) {
                         mainFrame.krabat.StopWalking();
                         mainFrame.repaint();
                         return;
@@ -453,18 +452,18 @@ public class Polo1 extends Mainloc {
                 }
 
                 // zu Weiden gehen
-                if (linkerAusgang.IsPointInRect(pTemp) == true) {
+                if (linkerAusgang.IsPointInRect(pTemp)) {
                     nextActionID = 100;
                     GenericPoint kt = mainFrame.krabat.GetKrabatPos();
 
                     // Wenn nahe am Ausgang, dann "gerade" verlassen
-                    if (linkerAusgang.IsPointInRect(kt) == false) {
+                    if (!linkerAusgang.IsPointInRect(kt)) {
                         pTemp = Pleft;
                     } else {
                         pTemp = new GenericPoint(Pleft.x, kt.y);
                     }
 
-                    if (mainFrame.dClick == true) {
+                    if (mainFrame.dClick) {
                         mainFrame.krabat.StopWalking();
                         mainFrame.repaint();
                         return;
@@ -472,7 +471,7 @@ public class Polo1 extends Mainloc {
                 }
 
                 // Hanza ansehen
-                if ((hanzaRect.IsPointInRect(pTemp) == true) || (michalRect.IsPointInRect(pTemp) == true)) {
+                if ((hanzaRect.IsPointInRect(pTemp)) || (michalRect.IsPointInRect(pTemp))) {
                     nextActionID = 1;
                     pTemp = Pburja;
                 }
@@ -483,17 +482,17 @@ public class Polo1 extends Mainloc {
                 // rechte Maustaste
 
                 // Kulow anschauen
-                if (linkerAusgang.IsPointInRect(pTemp) == true) {
+                if (linkerAusgang.IsPointInRect(pTemp)) {
                     return;
                 }
 
                 // Weiden anschauen
-                if (rechterAusgang.IsPointInRect(pTemp) == true) {
+                if (rechterAusgang.IsPointInRect(pTemp)) {
                     return;
                 }
 
                 // Mit den Bauern reden
-                if ((michalRect.IsPointInRect(pTemp) == true) || (hanzaRect.IsPointInRect(pTemp) == true)) {
+                if ((michalRect.IsPointInRect(pTemp)) || (hanzaRect.IsPointInRect(pTemp))) {
                     nextActionID = 50;
                     mainFrame.wegGeher.SetzeNeuenWeg(Pburja);
                     mainFrame.repaint();
@@ -501,7 +500,7 @@ public class Polo1 extends Mainloc {
                 }
 
                 // Kamuski nehmen
-                if ((kamuskiRect.IsPointInRect(pTemp) == true) && (mainFrame.Actions[912] == false)) {
+                if ((kamuskiRect.IsPointInRect(pTemp)) && (!mainFrame.Actions[912])) {
                     nextActionID = 55;
                     mainFrame.wegGeher.SetzeNeuenWeg(Pkamuski);
                     mainFrame.repaint();
@@ -520,13 +519,13 @@ public class Polo1 extends Mainloc {
     @Override
     public void evalMouseMoveEvent(GenericPoint pTemp) {
         // bei Multiple Choice eigene Routine aufrufen
-        if (mainFrame.isMultiple == true) {
+        if (mainFrame.isMultiple) {
             Dialog.evalMouseMoveEvent(pTemp);
             return;
         }
 
         // Wenn Animation oder Krabat - Animation, dann transparenter Cursor
-        if ((mainFrame.fPlayAnim == true) || (mainFrame.krabat.nAnimation != 0)) {
+        if ((mainFrame.fPlayAnim) || (mainFrame.krabat.nAnimation != 0)) {
             if (Cursorform != 20) {
                 Cursorform = 20;
                 mainFrame.setCursor(mainFrame.Nix);
@@ -535,23 +534,19 @@ public class Polo1 extends Mainloc {
         }
 
         // wenn InventarCursor, dann anders reagieren
-        if (mainFrame.invCursor == true) {
+        if (mainFrame.invCursor) {
             // hier kommt Routine hin, die Highlight berechnet
             Borderrect tmp = mainFrame.krabat.KrabatRect();
-            if ((tmp.IsPointInRect(pTemp) == true) || (hanzaRect.IsPointInRect(pTemp) == true) ||
-                    (michalRect.IsPointInRect(pTemp) == true) || ((kamuskiRect.IsPointInRect(pTemp) == true) &&
-                    (mainFrame.Actions[912] == false))) {
-                mainFrame.invHighCursor = true;
-            } else {
-                mainFrame.invHighCursor = false;
-            }
+            mainFrame.invHighCursor = (tmp.IsPointInRect(pTemp)) || (hanzaRect.IsPointInRect(pTemp)) ||
+                    (michalRect.IsPointInRect(pTemp)) || ((kamuskiRect.IsPointInRect(pTemp)) &&
+                    (!mainFrame.Actions[912]));
 
-            if ((Cursorform != 10) && (mainFrame.invHighCursor == false)) {
+            if ((Cursorform != 10) && (!mainFrame.invHighCursor)) {
                 Cursorform = 10;
                 mainFrame.setCursor(mainFrame.Cinventar);
             }
 
-            if ((Cursorform != 11) && (mainFrame.invHighCursor == true)) {
+            if ((Cursorform != 11) && (mainFrame.invHighCursor)) {
                 Cursorform = 11;
                 mainFrame.setCursor(mainFrame.CHinventar);
             }
@@ -560,9 +555,9 @@ public class Polo1 extends Mainloc {
 
         // normaler Cursor, normale Reaktion
         else {
-            if ((hanzaRect.IsPointInRect(pTemp) == true) ||
-                    (michalRect.IsPointInRect(pTemp) == true) ||
-                    ((kamuskiRect.IsPointInRect(pTemp) == true) && (mainFrame.Actions[912] == false))) {
+            if ((hanzaRect.IsPointInRect(pTemp)) ||
+                    (michalRect.IsPointInRect(pTemp)) ||
+                    ((kamuskiRect.IsPointInRect(pTemp)) && (!mainFrame.Actions[912]))) {
                 if (Cursorform != 1) {
                     mainFrame.setCursor(mainFrame.Kreuz);
                     Cursorform = 1;
@@ -570,7 +565,7 @@ public class Polo1 extends Mainloc {
                 return;
             }
 
-            if (rechterAusgang.IsPointInRect(pTemp) == true) {
+            if (rechterAusgang.IsPointInRect(pTemp)) {
                 if (Cursorform != 3) {
                     mainFrame.setCursor(mainFrame.Cright);
                     Cursorform = 3;
@@ -578,7 +573,7 @@ public class Polo1 extends Mainloc {
                 return;
             }
 
-            if (linkerAusgang.IsPointInRect(pTemp) == true) {
+            if (linkerAusgang.IsPointInRect(pTemp)) {
                 if (Cursorform != 2) {
                     mainFrame.setCursor(mainFrame.Cleft);
                     Cursorform = 2;
@@ -596,7 +591,7 @@ public class Polo1 extends Mainloc {
 
     @Override
     public void evalMouseExitEvent(GenericMouseEvent e) {
-        if (mainFrame.isMultiple == true) {
+        if (mainFrame.isMultiple) {
             Dialog.evalMouseExitEvent(e);
         }
     }
@@ -606,18 +601,18 @@ public class Polo1 extends Mainloc {
     @Override
     public void evalKeyEvent(GenericKeyEvent e) {
         // Bei Multiple Choice eigene Keyroutine
-        if (mainFrame.isMultiple == true) {
+        if (mainFrame.isMultiple) {
             Dialog.evalKeyEvent(e);
             return;
         }
 
         // Wenn Inventarcursor, dann keine Keys
-        if (mainFrame.invCursor == true) {
+        if (mainFrame.invCursor) {
             return;
         }
 
         // Bei Animationen keine Keys
-        if (mainFrame.fPlayAnim == true) {
+        if (mainFrame.fPlayAnim) {
             return;
         }
 
@@ -650,7 +645,6 @@ public class Polo1 extends Mainloc {
             Keyclear();
             nextActionID = 120;
             mainFrame.repaint();
-            return;
         }
     }
 
@@ -669,8 +663,8 @@ public class Polo1 extends Mainloc {
 
     private void DoAction() {
         // nichts zu tun, oder Krabat laeuft noch
-        if ((mainFrame.krabat.isWandering == true) ||
-                (mainFrame.krabat.isWalking == true)) {
+        if ((mainFrame.krabat.isWandering) ||
+                (mainFrame.krabat.isWalking)) {
             return;
         }
 
@@ -731,7 +725,7 @@ public class Polo1 extends Mainloc {
             case 60:
                 // Kamuski benutzen
                 mainFrame.krabat.SetFacing(9);
-                mainFrame.inventory.vInventory.addElement(new Integer(12));
+                mainFrame.inventory.vInventory.addElement(Integer.valueOf(12));
                 mainFrame.wegGeher.SetzeNeuenWeg(pStein1);
                 nextActionID = 62;
                 break;
